--- a/src/sass/module/_todo.sass
+++ b/src/sass/module/_todo.sass
@@ -36,29 +36,49 @@ body
             button
                 width: 500px
 
-    .todo-item
-        display: flex
+    .todo
         background-color: white
-        justify-content: space-between
-        margin: 10px
-        padding: 10px
+        // display: flex
+        // justify-content: space-between
         border-radius: 5px
-        .divBtn
-            .checkButton
-                background-color: #007BFF
-                border: none
-                margin: 0 5px
-                border-radius: 3px
-                padding: 5px 10px
-            .deleteButton
-                background-color: #DC3545
-                border: none
-                margin: 0 5px
-                border-radius: 3px
-                padding: 5px 10px
-            .editButton
-                background-color:#28A745
-                border: none
-                margin: 0 5px
-                border-radius: 3px
-                padding: 5px 10px
+        // transition: all 0.5s ease
+        margin: 10px
+        .todo-item
+            display: flex
+            justify-content: space-between
+            border-radius: 5px
+            transition: all 0.5s ease
+            width: 100%
+            margin: 0
+            .todo-text
+                color: #282b2e
+                margin: 0px 10px
+            .divBtn
+                .checkButton
+                    background-color: #007BFF
+                    border: none
+                    margin: 0 5px
+                    border-radius: 3px
+                    padding: 5px 10px
+                .deleteButton
+                    background-color: #DC3545
+                    border: none
+                    margin: 0 5px
+                    border-radius: 3px
+                    padding: 5px 10px
+                .editButton
+                    background-color:#28A745
+                    border: none
+                    margin: 0 5px
+                    border-radius: 3px
+                    padding: 5px 10px
+.fa-check,.fa-trash-alt,.fa-edit
+    pointer-events: none
+.checked
+    background-color:#4e9ef3
+    color: white
+    margin: 0
+    margin: 10px
+    
+.none
+    display: none
